add remvoe_community_participant
